--- a/css/bubble-style.css
+++ b/css/bubble-style.css
@@ -42,6 +42,7 @@
 
 #bubble-buttons1, #bubble-buttons2 {
     padding-bottom: 2%;
+
 }
 
 .bubble-btnStyle:hover {
@@ -57,5 +58,11 @@
     font-size: 15px;
     text-align: justify;
     margin-top: 10%;
-    margin-left: 5%;
+
+}
+
+.bubble-btnStyle1 {
+    position: relative;
+    text-align: center;
+    border-radius: 40px;
 }
