--- a/css/size-style.css
+++ b/css/size-style.css
@@ -8,9 +8,18 @@
 }
 
 .size-section-heading {
-    margin-top: 5%;
+    margin-top: 0%;
     margin-bottom: 2%;
+    padding-top: 5%;
     font-size: 50px;
     text-align: center;
     color: red;
+}
+
+.size-section-heading2 {
+    padding-left: 0;
+    margin-left: 0;
+    text-align: center;
+    color: white;
+    font-size: 25px;
 }
